# BluetoothSample

./: CMakeLists.txt  README.md  bths.c  btinclude.h  rfcomm.c  sco.c  sdp.c  set_class.c
bluetooth_scan/: CMakeLists.txt  main.c
